<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_caption"
        android:textSize="16sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:paddingBottom="16dp"
        android:id="@+id/surnameField"
        android:nextFocusDown="@+id/nameField"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingBottom="16dp"
        android:id="@+id/nameField"
        android:nextFocusDown="@+id/fathernameField"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fathername"
        android:paddingBottom="16dp"
        android:id="@+id/fathernameField"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"
        />
</LinearLayout>
